Added info in README

--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+What is this project?
+
+Setting up a new Play application can take a lot of work. So I created a template
+using code from toddobryan/play-polls and some of my work on it.
+Includes basic stuff for accounts.
+
+
+
 This is your new Play application
 =====================================
 
